# vosk_example_gui

./: .gitignore  README.md  README_EN.md  pyproject.toml  requirements.txt  sample_words.txt
vosk_example_gui/: __main__.py  app.py  audio.py  config.py  view.py  vosk_client.py
