[tool.poetry]
name = "vosk_example_gui"
version = "0.1.0"
description = ""
authors = ["T-Sumida <ui.suto05@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
vosk = "0.3.40"
sounddevice = "^0.4.5"
PySimpleGUI = "4.45.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
