[tool.poetry]
name = "vosk_example_gui"
version = "0.1.0"
description = ""
authors = ["T-Sumida <ui.suto05@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
vosk = "0.3.40"
sounddevice = "^0.4.5"
PySimpleGUI = "4.45.0"
numpy = "^1.23.2"
requests = "^2.28.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
pyinstaller = "^5.3"
pysen = {extras = ["lint"], version = "^0.10.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10.2"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py38"

[[tool.pysen.lint.mypy_targets]]
  paths = ["."]